Fix logo letter spacing

--- a/assets/_src/sass/components/_header.scss
+++ b/assets/_src/sass/components/_header.scss
@@ -31,6 +31,7 @@
 		font-size: 22px;
 		font-style: normal;
 		font-weight: 600;
+		letter-spacing: 0.5px;
 		line-height: 22px;
 	}
 
